--- a/FragmentsStartingPoint/app/src/main/res/layout/activity_main.xml
+++ b/FragmentsStartingPoint/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:orientation="vertical"
+    >
 
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="290dp"
         android:id="@+id/container"
         >
-
     </android.support.v4.view.ViewPager>
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="10dp"
+        >
+        <TextView
+            android:id="@+id/textFromFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="No text from Fragments"
+            android:gravity="center"
+            />
+        <EditText
+            android:id="@+id/editMessageToFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:hint="Enter a text to send to fragment"
+            android:gravity="center_horizontal"
+            />
+        <Button
+            android:id="@+id/butSendTextToFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:text="Click to send this message to Fragment"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="13dp"
+            android:gravity="center"
+            android:text="This button will inflate the fragment named 'FragmentAttachedUsingMyFragmentTransactor' and then it will send this text from above to that Fragment."/>
+        <!--
+            THIS LAYOUT WILL HOLD THE INSERTED
+            FRAGMENTS INTO THE ACTIVITY
+        -->
+        <LinearLayout
+            android:id="@+id/fragmentContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </LinearLayout>
+    </LinearLayout>
+
+</LinearLayout>
